// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match Cards component in dark format snapshot 1`] = `
<div>
  <div
    class="cards"
  >
    <div
      class="card card--dark"
    >
      <p
        class="card__title"
      >
        The End Of History
      </p>
      <div
        class="card__text"
      >
        <p
          class="card__tag"
        >
          The World's Strongest Beer.
        </p>
        <p
          class="card__desc"
        >
          The End of History: The name derives from the famous work of philosopher Francis Fukuyama, this is to beer what democracy is to history. Complexity defined. Floral, grapefruit, caramel and cloves are intensified by boozy heat.
        </p>
      </div>
      <div
        class="card__details"
      >
        <div
          class="card__ph"
        >
          <p
            class="card__details-title"
          >
            pH
          </p>
          <p
            class="card__details-val"
          >
            4.4
          </p>
        </div>
        <div
          class="card__release"
        >
          <p
            class="card__details-title"
          >
            Released
          </p>
          <p
            class="card__details-val"
          >
            06/2011
          </p>
        </div>
        <div
          class="card__acl"
        >
          <p
            class="card__details-title"
          >
            ABV (%)
          </p>
          <p
            class="card__details-val"
          >
            55
          </p>
        </div>
      </div>
    </div>
    <div
      class="card card--dark"
    >
      <p
        class="card__title"
      >
        Buzz
      </p>
      <div
        class="card__text"
      >
        <p
          class="card__tag"
        >
          A Real Bitter Experience.
        </p>
        <p
          class="card__desc"
        >
          A light, crisp and bitter IPA brewed with English and American hops. A small batch brewed only once.
        </p>
      </div>
      <div
        class="card__details"
      >
        <div
          class="card__ph"
        >
          <p
            class="card__details-title"
          >
            pH
          </p>
          <p
            class="card__details-val"
          >
            4.4
          </p>
        </div>
        <div
          class="card__release"
        >
          <p
            class="card__details-title"
          >
            Released
          </p>
          <p
            class="card__details-val"
          >
            09/2007
          </p>
        </div>
        <div
          class="card__acl"
        >
          <p
            class="card__details-title"
          >
            ABV (%)
          </p>
          <p
            class="card__details-val"
          >
            4.5
          </p>
        </div>
      </div>
    </div>
    <div
      class="card card--dark"
    >
      <p
        class="card__title"
      >
        Avery Brown Dredge
      </p>
      <div
        class="card__text"
      >
        <p
          class="card__tag"
        >
          Bloggers' Imperial Pilsner.
        </p>
        <p
          class="card__desc"
        >
          An Imperial Pilsner in collaboration with beer writers. Tradition. Homage. Revolution. We wanted to showcase the awesome backbone of the Czech brewing tradition, the noble Saaz hop, and also tip our hats to the modern beers that rock our world, and the people who make them.
        </p>
      </div>
      <div
        class="card__details"
      >
        <div
          class="card__ph"
        >
          <p
            class="card__details-title"
          >
            pH
          </p>
          <p
            class="card__details-val"
          >
            4.4
          </p>
        </div>
        <div
          class="card__release"
        >
          <p
            class="card__details-title"
          >
            Released
          </p>
          <p
            class="card__details-val"
          >
            02/2011
          </p>
        </div>
        <div
          class="card__acl"
        >
          <p
            class="card__details-title"
          >
            ABV (%)
          </p>
          <p
            class="card__details-val"
          >
            7.2
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should match Cards component in light format snapshot 1`] = `
<div>
  <div
    class="cards"
  >
    <div
      class="card"
    >
      <p
        class="card__title"
      >
        The End Of History
      </p>
      <div
        class="card__text"
      >
        <p
          class="card__tag"
        >
          The World's Strongest Beer.
        </p>
        <p
          class="card__desc"
        >
          The End of History: The name derives from the famous work of philosopher Francis Fukuyama, this is to beer what democracy is to history. Complexity defined. Floral, grapefruit, caramel and cloves are intensified by boozy heat.
        </p>
      </div>
      <div
        class="card__details"
      >
        <div
          class="card__ph"
        >
          <p
            class="card__details-title"
          >
            pH
          </p>
          <p
            class="card__details-val"
          >
            4.4
          </p>
        </div>
        <div
          class="card__release"
        >
          <p
            class="card__details-title"
          >
            Released
          </p>
          <p
            class="card__details-val"
          >
            06/2011
          </p>
        </div>
        <div
          class="card__acl"
        >
          <p
            class="card__details-title"
          >
            ABV (%)
          </p>
          <p
            class="card__details-val"
          >
            55
          </p>
        </div>
      </div>
    </div>
    <div
      class="card"
    >
      <p
        class="card__title"
      >
        Buzz
      </p>
      <div
        class="card__text"
      >
        <p
          class="card__tag"
        >
          A Real Bitter Experience.
        </p>
        <p
          class="card__desc"
        >
          A light, crisp and bitter IPA brewed with English and American hops. A small batch brewed only once.
        </p>
      </div>
      <div
        class="card__details"
      >
        <div
          class="card__ph"
        >
          <p
            class="card__details-title"
          >
            pH
          </p>
          <p
            class="card__details-val"
          >
            4.4
          </p>
        </div>
        <div
          class="card__release"
        >
          <p
            class="card__details-title"
          >
            Released
          </p>
          <p
            class="card__details-val"
          >
            09/2007
          </p>
        </div>
        <div
          class="card__acl"
        >
          <p
            class="card__details-title"
          >
            ABV (%)
          </p>
          <p
            class="card__details-val"
          >
            4.5
          </p>
        </div>
      </div>
    </div>
    <div
      class="card"
    >
      <p
        class="card__title"
      >
        Avery Brown Dredge
      </p>
      <div
        class="card__text"
      >
        <p
          class="card__tag"
        >
          Bloggers' Imperial Pilsner.
        </p>
        <p
          class="card__desc"
        >
          An Imperial Pilsner in collaboration with beer writers. Tradition. Homage. Revolution. We wanted to showcase the awesome backbone of the Czech brewing tradition, the noble Saaz hop, and also tip our hats to the modern beers that rock our world, and the people who make them.
        </p>
      </div>
      <div
        class="card__details"
      >
        <div
          class="card__ph"
        >
          <p
            class="card__details-title"
          >
            pH
          </p>
          <p
            class="card__details-val"
          >
            4.4
          </p>
        </div>
        <div
          class="card__release"
        >
          <p
            class="card__details-title"
          >
            Released
          </p>
          <p
            class="card__details-val"
          >
            02/2011
          </p>
        </div>
        <div
          class="card__acl"
        >
          <p
            class="card__details-title"
          >
            ABV (%)
          </p>
          <p
            class="card__details-val"
          >
            7.2
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
